--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.3",
     "vaul": "^1.1.2",
-    "zod": "^3.25.56"
+    "zod": "^3.25.56",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
