--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@tabler/icons-react": "^3.34.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/react-dom": "^19.1.6",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.9.4",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.507.0",
     "next": "^15.3.0",
     "next-themes": "^0.4.6",
